--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,24 +7,22 @@ services:
     command: gunicorn auction.wsgi --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
-  
   frontend:
     build:
       context: ./client
+    ports:
+      - "3000:3000"
     volumes:
       - react_build:/react/build
-
   nginx:
     image: nginx:latest
     ports:
       - 80:8080
     volumes:
-      - ./nginx/nginx-setup.config:/etc/nginx/conf.d/
+      - ./nginx/nginx-setup.conf:/etc/nginx/conf.d/
       - react_build:/var/www/react
-
     depends_on:
       - backend
       - frontend
-
 volumes:
   react_build:
